fix: cookie not saved in browser, search modal not align center

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -260,6 +260,7 @@
 .modal {
     position: absolute;
     top: 50%;
+    left: 0;
     transform: translateY(-50%);
     display: none;
     height: 4.8rem;
